styling Total Activiity Boxe

--- a/comm.html
+++ b/comm.html
@@ -91,13 +91,33 @@
                     <div class="lil-content"><i class="fa-regular fa-hourglass"></i><span class="lil-span">In progress</span></div>
                 </div>
                 <div class="total-salary">
-                    <h2>$370</h2><span><br>
+                    <h2>$370</h2><br>
                     <div class="lil-content"><i class='bx bx-dollar-circle'></i>
                     <span class="lil-span">Salary</span></div>
                 </div>
                 </div>
-
-            <div class="weekly-activity"></div>
+            <div class="weekly-activity">
+                <div class="chart-box">
+                    <div class="chart"></div>
+                    <div class="activity-percent">
+                        <h1 class="text-2xl">68%</h1>
+                        <p>Weekly activity</p>
+                    </div>
+                </div>
+                <div class="developement-box">
+                    <div class="developement">
+                        <img src="github-icon.png" alt="github-icon" width="30" style=" --i:1; z-index: 1;" >
+                        <img src="Git-Icon.png" alt="git-icon" width="30" style=" --i:2; z-index: 2;" > 
+                        <img src="vscode-logo3.png" alt="" width="30" style=" --i:3; z-index: 3;" > <span>Developement</span><span>72%</span> 
+                    </div>
+                    <hr>
+                    <div class="serching">
+                        <img src="Google_Meet-Logo.png" alt="google mett-logo" width="40" style=" --i:1; z-index: 1;" > 
+                        <img src="telegram-logo3.webp" alt="Telegram-icon" width="40" style=" --i:2; z-index: 2;" >
+                        <img src="Gmail_Logo.png" alt="Gmail_Logo" width="30" style=" --i:3; z-index: 3;" > <span>Chating & Searching</span><span>28%</span>
+                    </div>
+                </div>
+            </div>
             <div class="time-tracking"></div>
             <div class="premiumbox"></div>
             <div class="working-format"></div>
