Complete Tatal-work Boxe

--- a/comm.html
+++ b/comm.html
@@ -29,7 +29,7 @@
                 <a href="#" id="mylink"><li id="selected-liste"><span class="material-symbols-rounded">group</span>
                 <span class="content">Emplayees </span><span class="material-symbols-rounded arrows" id="down-arrow">keyboard_arrow_down</span></li></a>
                 <ul id="listes-content">
-                    <li> <input type="radio" id="developement" name="emplayees"><label for="developement">Developement</label> </li>
+                    <li> <input type="radio" id="developement" name="emplayees" checked><label for="developement">Developement</label> </li>
                     
                     <li> <input type="radio" id="design" name="emplayees"><label for="design">Design</label> </li>
                     
@@ -108,13 +108,15 @@
                     <div class="developement">
                         <img src="github-icon.png" alt="github-icon" width="30" style=" --i:1; z-index: 1;" >
                         <img src="Git-Icon.png" alt="git-icon" width="30" style=" --i:2; z-index: 2;" > 
-                        <img src="vscode-logo3.png" alt="" width="30" style=" --i:3; z-index: 3;" > <span>Developement</span><span>72%</span> 
+                        <img src="vscode-logo3.png" alt="" width="30" style=" --i:3; z-index: 3;" >
+                        <span class="or-span1">Developement</span><span class="myspan">72%</span> 
                     </div>
                     <hr>
                     <div class="serching">
-                        <img src="Google_Meet-Logo.png" alt="google mett-logo" width="40" style=" --i:1; z-index: 1;" > 
-                        <img src="telegram-logo3.webp" alt="Telegram-icon" width="40" style=" --i:2; z-index: 2;" >
-                        <img src="Gmail_Logo.png" alt="Gmail_Logo" width="30" style=" --i:3; z-index: 3;" > <span>Chating & Searching</span><span>28%</span>
+                        <img src="linkedin-logo.webp" alt="google mett-logo" width="30" style=" --i: .65; z-index: 1;" > 
+                        <img src="Gmail_Logo.png" alt="Gmail_Logo" width="35" height="35" style=" --i: 1.35; z-index: 2;" >
+                        <img src="telegram-logo3.webp" alt="Telegram-icon" width="30" style=" --i: 2.2; z-index: 3;" >
+                        <span class="or-span2">Chating & Searching</span><span class="myspan">28%</span>
                     </div>
                 </div>
             </div>
