Complete Time-Tracking box

--- a/comm.html
+++ b/comm.html
@@ -120,7 +120,27 @@
                     </div>
                 </div>
             </div>
-            <div class="time-tracking"></div>
+            <div class="time-tracking">
+                <h2 class="myH2"> Time tracking</h2>
+                <div class="time-box">
+                    <p class="myP1">Banking app</p>
+
+                    <h1>03:37:52</h1> <i class='bx bx-play' ></i>
+                </div>
+                <div class="ui-boxes">
+                    <div class="ui1">
+                        <img src="layout-logo.png" alt="layout logo" width="40"> 
+                            <p>UX Researching</p> 
+                        <i class='bx bx-dots-vertical-rounded'></i>
+                    </div>
+                    <hr>
+                    <div class="ui2">
+                        <img src="layout-logo.png" alt="layout logo" width="40"> 
+                            <p>Wireframing</p> 
+                        <i class='bx bx-dots-vertical-rounded'></i>
+                    </div>
+                </div>
+            </div>
             <div class="premiumbox"></div>
             <div class="working-format"></div>
             <div class="dates-management"></div>
