Complete Premium box

--- a/comm.html
+++ b/comm.html
@@ -16,7 +16,7 @@
     <div class="allPage">
         <div class="container">
             <div class="header">
-                <h2>SimoCode</h2>
+                <h2 style="font-size: 1.5rem; ">Simo<span style="color: #1b1bff; ">C</span>ode</h2>
             </div>
         <div class="listes">
             <ul class="members-list">
@@ -141,7 +141,17 @@
                     </div>
                 </div>
             </div>
-            <div class="premiumbox"></div>
+            <div class="premiumbox">
+                <div class="headbox">
+                    <h3 style="font-size: 1.4rem;">SimoCode</h3> <p style="background-color: #ff00ff; padding: 0px 8px; border-radius: 5px; box-shadow: 1px 1px 5px 2px #ff00ff;">Premium</p>
+                </div>
+                <h1 style="font-size: 1.7rem; font-weight: 300; line-height: 30px;  margin: 15px 0;">Find employees <br>and manage <br> your workflow</h1>
+                <div class="users">
+                    <img src="person1.jpg" alt="person1" width="37.5" style="border-radius: 50%; border: solid #23d9a5 3px; --i: 1;">
+                    <img src="person2.jpg" alt="person2" width="37.5" style="border-radius: 50%; border: solid #23d9a5 3px; --i: 2;">
+                    <img src="person3.jpg" alt="person3" width="37.5" style="border-radius: 50%; border: solid #23d9a5 3px; --i: 3;"> <span style="position: relative; left: -30px;">150k+ users</span>
+                </div>
+            </div>
             <div class="working-format"></div>
             <div class="dates-management"></div>
         </div>
