Complete tracking-format box

--- a/comm.html
+++ b/comm.html
@@ -124,20 +124,19 @@
                 <h2 class="myH2"> Time tracking</h2>
                 <div class="time-box">
                     <p class="myP1">Banking app</p>
-
                     <h1>03:37:52</h1> <i class='bx bx-play' ></i>
                 </div>
                 <div class="ui-boxes">
                     <div class="ui1">
                         <img src="layout-logo.png" alt="layout logo" width="40"> 
                             <p>UX Researching</p> 
-                        <i class='bx bx-dots-vertical-rounded'></i>
+                        <i class='bx bx-dots-vertical-rounded' style="cursor: pointer;"></i>
                     </div>
                     <hr>
                     <div class="ui2">
                         <img src="layout-logo.png" alt="layout logo" width="40"> 
                             <p>Wireframing</p> 
-                        <i class='bx bx-dots-vertical-rounded'></i>
+                        <i class='bx bx-dots-vertical-rounded' style="cursor: pointer;"></i>
                     </div>
                 </div>
             </div>
@@ -152,7 +151,21 @@
                     <img src="person3.jpg" alt="person3" width="37.5" style="border-radius: 50%; border: solid #23d9a5 3px; --i: 3;"> <span style="position: relative; left: -30px;">150k+ users</span>
                 </div>
             </div>
-            <div class="working-format"></div>
+            <div class="working-format">
+                <div class="headers">
+                    <p>Working format</p><span>Details</span>
+                </div>
+                <div class="bars">
+                    <div class="remote-bar">
+                        <h2>42%</h2>
+                        <span>Remote</span>
+                    </div>
+                    <div class="hybird-bar">
+                        <h2>58%</h2>
+                        <span>Hybird</span>
+                    </div>
+                </div>
+            </div>
             <div class="dates-management"></div>
         </div>
     </div>
