styling boxes and we'll get a clean page

--- a/comm.html
+++ b/comm.html
@@ -166,7 +166,24 @@
                     </div>
                 </div>
             </div>
-            <div class="dates-management"></div>
+            <div class="dates-management">
+                <div class="days-dates">
+                    <i class="fas fa-angle-left" id="i1"></i>
+                    <span class="now-date">Juli 2024</span>
+                    <i class="fas fa-angle-right" id="i2"></i>  
+                    <div class="days-box">
+                        <span class="m">M</span> <span class="t1">T</span>  <span class="w">W</span>  <span class="t2">T</span>    <span class="f">F</span>   <span class="s-1">S</span>   <span class="s-2">S</span>
+                        <span class="s271">27</span><span class="s281">28</span> <span class="s291">29</span> <span class="s301">30</span> <span class="s1">1</span>   <span class="s2">2</span>   <span class="s3">3</span>
+                        <span class="s4">4</span>  <span class="s5">5</span>   <span class="s6">6</span>   <span class="s7">7</span>   <span class="s8">8</span>   <span class="s9">9</span>   <span class="s10">10</span>
+                        <span class="s11">11</span><span class="s12">12</span> <span class="s13">13</span> <span class="s14">14</span> <span class="s15">15</span> <span class="s16">16</span> <span class="s17">17</span>
+                        <span class="s18">18</span><span class="s20">19</span> <span class="s20">20</span> <span class="s21">21</span> <span class="s22">22</span> <span class="s23">23</span> <span class="s24">24</span>
+                        <span class="s25">25</span><span class="s26">26</span> <span class="s272">27</span> <span class="s282">28</span> <span class="s292">29</span> <span class="s302">30</span> <span class="s31">31</span>
+                    </div> 
+                </div>
+                <div class="dates-tools">
+
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/efbc733aaf.js" crossorigin="anonymous"></script>
